fixed issues with wrong background images

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,16 +11,20 @@ a {
 }
 
 .bg-nugget {
-    background-image: url("../public/assets/images/GoldNuggets3ExtendedGrad.webp");
+    background-image: url("../public/assets/images/GoldNuggets3Extended.webp");
     background-size: 100% auto;
     background-repeat: repeat;
     min-height: 100%;
     box-shadow: inset 0 0 0 100vw rgba(26, 26, 26, 0.3);
 }
 
-@media (min-width:576px) {
-    .bg-nugget {
-        background-image: url("../public/assets/images/GoldNuggets3Extended.webp");
+@media (max-width:576px) {
+    .bg-main {
+        padding-bottom:36vh;
+        background-image: url("../public/assets/images/GoldNuggets3ExtendedGrad.webp");
+        background-size: 100% auto;
+        background-repeat: repeat;
+        min-height: 100%;
     }
 }
 
